--- a/projects/integrate/admin/application/functions/cloud/cloud.component.html
+++ b/projects/integrate/admin/application/functions/cloud/cloud.component.html
@@ -3,7 +3,7 @@
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-title>
-          <img height="20px" [src]="['assets', 'cloud', 'tencent.svg'] | wpxAssets" alt="" />
+          <img height="20px" src="/assets/cloud/tencent.svg" alt="" />
         </nz-list-item-meta-title>
         <nz-list-item-meta-description *ngIf="!(platform && platform === 'tencent')">
           当前未关联腾讯云平台
@@ -33,7 +33,7 @@
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-title>
-          <img height="20px" [src]="['assets', 'cloud', 'aliyun.png'] | wpxAssets" alt="" />
+          <img height="20px" src="/assets/cloud/aliyun.png" alt="" />
         </nz-list-item-meta-title>
         <nz-list-item-meta-description>当前未关联阿里云平台</nz-list-item-meta-description>
       </nz-list-item-meta>
@@ -44,7 +44,7 @@
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-title>
-          <img height="30px" [src]="['assets', 'cloud', 'huaweicloud.svg'] | wpxAssets" alt="" />
+          <img height="30px" src="/assets/cloud/huaweicloud.svg" alt="" />
         </nz-list-item-meta-title>
         <nz-list-item-meta-description>当前未关联华为云平台</nz-list-item-meta-description>
       </nz-list-item-meta>
