--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
             <nz-col>
               <nz-space>
                 <a *nzSpaceItem nz-tooltip="飞书" (click)="feishuOAuth()">
-                  <nz-avatar nzSize="small" nzShape="square" [nzSrc]="['assets', 'feishu.png'] | wpxAssets"></nz-avatar>
+                  <nz-avatar nzSize="small" nzShape="square" nzSrc="/assets/office/feishu.png"></nz-avatar>
                 </a>
               </nz-space>
             </nz-col>
