--- a/projects/integrate/admin/application/functions/office/office.component.html
+++ b/projects/integrate/admin/application/functions/office/office.component.html
@@ -3,11 +3,7 @@
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-avatar>
-          <nz-avatar
-            nzShape="square"
-            nzSize="large"
-            [nzSrc]="['assets', 'office', 'feishu.png'] | wpxAssets"
-          ></nz-avatar>
+          <nz-avatar nzShape="square" nzSize="large" nzSrc="assets/office/feishu.png"></nz-avatar>
         </nz-list-item-meta-avatar>
         <nz-list-item-meta-title><b>飞书</b></nz-list-item-meta-title>
         <nz-list-item-meta-description *ngIf="!(platform && platform === 'feishu')">
@@ -40,11 +36,7 @@
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-avatar>
-          <nz-avatar
-            nzShape="square"
-            nzSize="large"
-            [nzSrc]="['assets', 'office', 'work-weixin.png'] | wpxAssets"
-          ></nz-avatar>
+          <nz-avatar nzShape="square" nzSize="large" nzSrc="assets/office/work-weixin.png"></nz-avatar>
         </nz-list-item-meta-avatar>
         <nz-list-item-meta-title><b>企业微信</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>当前未关联企业微信</nz-list-item-meta-description>
@@ -56,11 +48,7 @@
     <nz-list-item>
       <nz-list-item-meta>
         <nz-list-item-meta-avatar>
-          <nz-avatar
-            nzShape="square"
-            nzSize="large"
-            [nzSrc]="['assets', 'office', 'dingtalk.png'] | wpxAssets"
-          ></nz-avatar>
+          <nz-avatar nzShape="square" nzSize="large" nzSrc="assets/office/dingtalk.png"></nz-avatar>
         </nz-list-item-meta-avatar>
         <nz-list-item-meta-title><b>钉钉</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>当前未关联钉钉</nz-list-item-meta-description>
