--- a/src/app/common/stage/stage.component.scss
+++ b/src/app/common/stage/stage.component.scss
@@ -3,6 +3,7 @@
   background-repeat: no-repeat;
   background-position: center 50px;
   background-size: 100%;
+  background-image: url('/assets/ant-bg.svg');
 }
 
 .footer {
