--- a/projects/integrate/admin/application/functions/office/office.component.html
+++ b/projects/integrate/admin/application/functions/office/office.component.html
@@ -42,7 +42,7 @@
         <nz-list-item-meta-description>当前未关联企业微信</nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="link" disabled> 计划中 </button>
+        <button nz-button nzType="link" disabled> 关联 </button>
       </nz-list-item-extra>
     </nz-list-item>
     <nz-list-item>
@@ -54,7 +54,7 @@
         <nz-list-item-meta-description>当前未关联钉钉</nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="link" disabled> 计划中 </button>
+        <button nz-button nzType="link" disabled> 关联 </button>
       </nz-list-item-extra>
     </nz-list-item>
   </nz-list>
