--- a/projects/integrate/admin/application/functions/cloud/cloud.component.html
+++ b/projects/integrate/admin/application/functions/cloud/cloud.component.html
@@ -38,7 +38,7 @@
         <nz-list-item-meta-description>当前未关联阿里云平台</nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="link" disabled> 计划中 </button>
+        <button nz-button nzType="link" disabled> 关联 </button>
       </nz-list-item-extra>
     </nz-list-item>
     <nz-list-item>
@@ -49,7 +49,7 @@
         <nz-list-item-meta-description>当前未关联华为云平台</nz-list-item-meta-description>
       </nz-list-item-meta>
       <nz-list-item-extra>
-        <button nz-button nzType="link" disabled> 计划中 </button>
+        <button nz-button nzType="link" disabled> 关联 </button>
       </nz-list-item-extra>
     </nz-list-item>
   </nz-list>
