--- a/projects/integrate/admin/application/functions/public/public.component.html
+++ b/projects/integrate/admin/application/functions/public/public.component.html
@@ -1,11 +1,15 @@
 <nz-list nzSize="large" nzItemLayout="vertical">
   <nz-list-item>
     <nz-list-item-meta>
-      <nz-list-item-meta-title><b>CDN 域名</b></nz-list-item-meta-title>
-      <nz-list-item-meta-description> 当前未设置 CDN 域名 </nz-list-item-meta-description>
+      <nz-list-item-meta-title><b>CDN 内容分发</b></nz-list-item-meta-title>
     </nz-list-item-meta>
+    <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
+      <nz-descriptions-item nzTitle="域名">
+        {{ data['cdn'] | nzSafeNull: '当前未设置 CDN 域名' }}
+      </nz-descriptions-item>
+    </nz-descriptions>
     <nz-list-item-extra>
-      <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置">
+      <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="cdn()">
         <i nz-icon nzType="tool"></i>
       </button>
     </nz-list-item-extra>
