--- a/projects/integrate/admin/application/functions/collector/collector.component.html
+++ b/projects/integrate/admin/application/functions/collector/collector.component.html
@@ -1,28 +1,22 @@
-<!--<ng-template #searchRef>-->
-<!--  <nz-input-group style="width: 180px" nzSuffixIcon="search">-->
-<!--    <input type="text" nz-input placeholder="标识搜索" />-->
-<!--  </nz-input-group>-->
-<!--</ng-template>-->
+<ng-template #extra>
+  <button nz-button nzType="primary"> 新增 </button>
+</ng-template>
 
-<!--<ng-template #actions>-->
-<!--  <button nz-button nzDanger nzType="primary"> 同步 </button>-->
-<!--</ng-template>-->
-
-<!--<nz-card [nzTitle]="searchRef" [nzExtra]="actions">-->
-<nz-table #basicTable [nzData]="[]" [nzHideOnSinglePage]="true">
-  <thead>
-    <tr>
-      <th nzWidth="240px"><b>标识</b></th>
-      <th nzWidth="240px"><b>主题</b></th>
-      <th><b>描述</b></th>
-      <th nzWidth="200px"><b>操作</b></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let item of basicTable.data">
-      <td> </td>
-      <td></td>
-    </tr>
-  </tbody>
-</nz-table>
-<!--</nz-card>-->
+<wpx-admin-functions-tabs [extra]="extra">
+  <nz-table #basicTable [nzData]="[]" [nzHideOnSinglePage]="true">
+    <thead>
+      <tr>
+        <th nzWidth="240px"><b>标识</b></th>
+        <th nzWidth="240px"><b>主题</b></th>
+        <th><b>描述</b></th>
+        <th nzWidth="200px"><b>操作</b></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of basicTable.data">
+        <td> </td>
+        <td></td>
+      </tr>
+    </tbody>
+  </nz-table>
+</wpx-admin-functions-tabs>
