--- a/projects/integrate/admin/application/factory/home/home.component.html
+++ b/projects/integrate/admin/application/factory/home/home.component.html
@@ -12,7 +12,8 @@
           <li>
             <i nz-icon nzType="calculator"></i>【数据聚合】引用数据集合，生成数据汇总与趋势分析的表格、统计图等；
           </li>
-          <li><i nz-icon nzType="folder"></i>【导航分组】导航中的分组，只做显示。</li>
+          <li><i nz-icon nzType="folder"></i>【导航分组】导航中的分组，只做显示；</li>
+          <li><i nz-icon nzType="stop"></i>【停用】状态未启用。</li>
         </ul>
       </div>
     </div>
