--- a/projects/integrate/admin/application/factory/indexes/indexes.component.html
+++ b/projects/integrate/admin/application/factory/indexes/indexes.component.html
@@ -11,10 +11,10 @@
   >
     <thead>
       <tr>
-        <th nzWidth="65px" nzLeft nzAlign="center"> </th>
-        <th nzWidth="200px" nzLeft>索引名称</th>
-        <th>索引信息</th>
-        <th nzWidth="100px" nzRight nzAlign="center">操作</th>
+        <th nzWidth="50px" nzLeft nzAlign="center"> </th>
+        <th nzWidth="200px" nzLeft><b>索引名称</b></th>
+        <th><b>索引信息</b></th>
+        <th nzWidth="50px" nzRight nzAlign="center"><b>操作</b></th>
       </tr>
     </thead>
     <tbody>
