--- a/projects/integrate/admin/application/factory/factory.component.html
+++ b/projects/integrate/admin/application/factory/factory.component.html
@@ -8,7 +8,7 @@
       </nz-col>
       <nz-col>
         <nz-button-group>
-          <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+          <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
             <i nz-icon nzType="reload"></i>
           </button>
           <button nz-button nzType="text" [nz-tooltip]="expand ? '收起' : '展开'" (click)="expanded()">
@@ -37,17 +37,20 @@
     >
       <ng-template #nzExpandedIcon let-node>
         <ng-container *ngIf="pages.dict?.[node.key] as page">
-          <ng-container [ngSwitch]="page.kind">
+          <ng-container *ngIf="!page.status; else kindTpl">
+            <i nz-icon nzType="stop"></i>
+          </ng-container>
+          <ng-template #kindTpl [ngSwitch]="page.kind">
             <ng-container *ngSwitchCase="'default'">
-              <i nz-icon nzType="database" nz-tooltip="数据源"></i>
+              <i nz-icon nzType="database"></i>
             </ng-container>
-            <ng-container *ngSwitchCase="'aggregation'" nz-tooltip="数据统计">
+            <ng-container *ngSwitchCase="'aggregation'">
               <i nz-icon nzType="calculator"></i>
             </ng-container>
             <ng-container *ngSwitchCase="'group'">
-              <i nz-icon [nzType]="!node.isExpanded ? 'folder' : 'folder-open'" nz-tooltip="导航分组"></i>
+              <i nz-icon [nzType]="!node.isExpanded ? 'folder' : 'folder-open'"></i>
             </ng-container>
-          </ng-container>
+          </ng-template>
         </ng-container>
       </ng-template>
       <nz-dropdown-menu #treeActions="nzDropdownMenu">
