--- a/projects/integrate/admin/application/factory/tabs/tabs.component.html
+++ b/projects/integrate/admin/application/factory/tabs/tabs.component.html
@@ -9,6 +9,19 @@
           索引规则
         </a>
       </nz-tab>
+      <nz-tab>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', pages.id, 'projection']">
+          投影规则
+        </a>
+      </nz-tab>
+      <nz-tab>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', pages.id, 'rules']"> 显隐规则 </a>
+      </nz-tab>
+      <nz-tab>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', pages.id, 'advanced']">
+          高级设置
+        </a>
+      </nz-tab>
     </nz-tabset>
   </nz-card-tab>
   <ng-content></ng-content>
