--- a/projects/integrate/admin/application/factory/advanced/advanced.component.html
+++ b/projects/integrate/admin/application/factory/advanced/advanced.component.html
@@ -1,1 +1,14 @@
-<wpx-admin-factory-tabs> </wpx-admin-factory-tabs>
+<ng-template #extra>
+  <button nz-button form="form" nzType="primary"> 更新 </button>
+</ng-template>
+
+<wpx-admin-factory-tabs [extra]="extra">
+  <form nz-form id="form" nzLayout="vertical" [formGroup]="form" (wpxSubmit)="submit($event)">
+    <nz-form-item>
+      <nz-form-label nzRequired>启用事务补偿</nz-form-label>
+      <nz-form-control>
+        <nz-switch formControlName="event"></nz-switch>
+      </nz-form-control>
+    </nz-form-item>
+  </form>
+</wpx-admin-factory-tabs>
