--- a/projects/angular/form/form.component.html
+++ b/projects/angular/form/form.component.html
@@ -181,7 +181,7 @@
       </ng-container>
     </ng-container>
   </ng-container>
-  <nz-form-item>
+  <nz-form-item *ngIf="!wpxSubmitHide">
     <nz-form-control>
       <button nz-button nzType="primary">提交</button>
     </nz-form-control>
