--- a/projects/integrate/dynamic/table/table.component.html
+++ b/projects/integrate/dynamic/table/table.component.html
@@ -3,5 +3,5 @@
 </ng-template>
 
 <nz-card [nzLoading]="data.loading" [nzTitle]="table.wpxSearch" [nzExtra]="extra">
-  <wpx-table #table [wpxKey]="key!" [wpxApi]="dynamic" [wpxData]="data" [wpxFields]="fields"></wpx-table>
+  <wpx-table #table [wpxKey]="key" [wpxApi]="dynamic" [wpxData]="data" [wpxFields]="fields"></wpx-table>
 </nz-card>
