--- a/projects/angular/form/form.component.html
+++ b/projects/angular/form/form.component.html
@@ -76,7 +76,7 @@
           </nz-form-control>
         </nz-form-item>
       </ng-container>
-      <ng-container *ngSwitchCase="'between-dates'">
+      <ng-container *ngSwitchCase="'dates'">
         <nz-form-item>
           <nz-form-label [nzRequired]="field.required">{{ field.label }}</nz-form-label>
           <nz-form-control
