--- a/src/app/common/stage/stage.component.html
+++ b/src/app/common/stage/stage.component.html
@@ -1,4 +1,4 @@
-<nz-layout class="main">
+<nz-layout class="main" [ngStyle]="{ 'background-image': ['assets', 'ant-bg.svg'] | wpxAssets: { css: true } }">
   <nz-content>
     <ng-content></ng-content>
   </nz-content>
