--- a/projects/integrate/admin/media/videos/videos.component.html
+++ b/projects/integrate/admin/media/videos/videos.component.html
@@ -8,10 +8,25 @@
   <wpx-media-view #ref wpxType="videos" [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"></wpx-media-view>
 </div>
 
-<nz-alert
-  style="position: fixed; bottom: 0; left: 200px; right: 0"
-  nzBanner
-  nzType="info"
-  nzMessage="接受 mp4 等文件类型的上传，其他文件将被阻止"
-  nzCloseable
-></nz-alert>
+<ng-container *ngIf="ref.ds.checkedNumber !== 0; else tip">
+  <nz-alert class="actions" nzType="info" nzBanner nzMessage="批量" [nzDescription]="description" [nzAction]="bulk">
+    <ng-template #description>
+      已选中 <nz-tag>{{ ref.ds.checkedNumber }}</nz-tag> 项
+    </ng-template>
+    <ng-template #bulk>
+      <a nz-button nzType="link" nzSize="small" (click)="ref.ds.clearChecked()">取消选择</a>
+      <br />
+      <a style="float: right" nz-button nzType="link" nzSize="small" nzDanger (click)="ref.bulkDelete()">删除</a>
+    </ng-template>
+  </nz-alert>
+</ng-container>
+
+<ng-template #tip>
+  <nz-alert
+    class="actions"
+    nzBanner
+    nzType="info"
+    nzMessage="接受 mp4 等文件类型的上传，其他文件将被阻止"
+    nzCloseable
+  ></nz-alert>
+</ng-template>
