--- a/projects/integrate/admin/application/functions/cloud/cos/cos.component.html
+++ b/projects/integrate/admin/application/functions/cloud/cos/cos.component.html
@@ -35,13 +35,7 @@
         }
       }"
     >
-      <nz-input-number
-        style="width: 100%"
-        formControlName="tencent_cos_expired"
-        [nzFormatter]="formatterSec"
-        [nzMin]="0"
-        [nzStep]="1"
-      ></nz-input-number>
+      <input nz-input formControlName="tencent_cos_expired" placeholder="例如：300s" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
