--- a/projects/integrate/admin/media/videos/videos.component.html
+++ b/projects/integrate/admin/media/videos/videos.component.html
@@ -5,7 +5,7 @@
 </nz-page-header>
 
 <div style="padding: 8px 8px 24px; height: calc(100% - 61px)">
-  <wpx-media-view #ref wpxType="videos" [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"></wpx-media-view>
+  <wpx-media-view #ref wpxType="videos" [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"></wpx-media-view>
 </div>
 
 <ng-container *ngIf="ref.ds.checkedNumber !== 0; else tip">
