更新：用户编辑

--- a/projects/angular/form/form.component.html
+++ b/projects/angular/form/form.component.html
@@ -158,7 +158,7 @@
             <wpx-media
               [formControlName]="field.key"
               [wpxType]="'pictures'"
-              [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"
+              [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"
             ></wpx-media>
           </nz-form-control>
         </nz-form-item>
@@ -170,7 +170,7 @@
             <wpx-media
               [formControlName]="field.key"
               [wpxType]="'videos'"
-              [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"
+              [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"
             ></wpx-media>
           </nz-form-control>
         </nz-form-item>
@@ -182,7 +182,7 @@
             <wpx-richtext
               [formControlName]="field.key"
               [wpxPlaceholder]="'请输入内容，按 TAB 唤起更多'"
-              [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"
+              [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"
             ></wpx-richtext>
           </nz-form-control>
         </nz-form-item>
