--- a/projects/integrate/center/profile/profile.component.html
+++ b/projects/integrate/center/profile/profile.component.html
@@ -31,7 +31,7 @@
       <wpx-upload-avatar
         wpxExt="image"
         [wpxAccept]="['image/jpeg', 'image/png']"
-        [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"
+        [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"
         formControlName="avatar"
       >
       </wpx-upload-avatar>
